--- a/odt.css
+++ b/odt.css
@@ -4,6 +4,12 @@
     font-weight: 500;
 }
 
+@font-face {
+    font-family: Almoni;
+    src: url(assets/fonts/Almoni/almoni-tzar-regular-aaa.otf);
+    font-weight: 500;
+}
+
 html,
 body, #main {
   margin: 0;
@@ -12,136 +18,208 @@ body, #main {
   width: 100%;
   overflow: hidden;
   direction: rtl;
-  font-family: "Rubik";
+  font-family: "Almoni";
+  font-weight: bold;
   user-select: none;
 }
 
-.page {
-    display: none;
-    height: 100vh;
-    width: 100vw;
+#home-page, #map-page {
+    background-image: url(./assets/media/SVG/bgMain.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.menuButton {
+    width: 9vw;
     position: absolute;
+    top: 2vh;
+    right: 3vw;
+}
+
+.exitButton {
+    width: 6vw;
+    position: absolute;
+    top: 2vh;
+    right: 3vw;
 }
 
 .title {
-    font-size: 6vw;
-    margin: auto;
+    width: fit-content;
+    min-width: 55vw;
+    top: 3vh;
     text-align: center;
-    position: relative;
-    margin-top: 7vh;
+    color: white;
+    /* font-family: "Rubik"; */
+    font-size: 2em;
     font-weight: bold;
 }
 
-.little-title {
-    font-size: 5vw;
-    margin: auto;
-    text-align: center;
-    position: relative;
-    margin-top: 2vh;
+.welcomeTitle {
+   top: 5vh; 
+}
+
+.title:after{
+    content:""; 
+    float:left; 
+    background:white; 
+    width:100%; 
+    height:4px; 
+    border-radius: 3px;
+}
+
+.titleOdt {
+  /* font-family: "Rubik"; */
+  width: fit-content;
+  min-width: 61vw;
+  top: 11vh;
+  text-align: center;
+}
+
+.yellow {
+    color: #edda9d;
+    text-shadow: -1.5px 1px #f7b173;
+    font-size: 1.5em;
     font-weight: bold;
 }
 
-.text {
-    font-size: 4vw;
-    width: 80vw;
-    margin: auto;
-    text-align: right;
-    position: relative;
-    margin-top: 2vw;
+.blue {
+    color: #7fcad2;
+    text-shadow: -1.5px 1px #40b2a7;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.red {
+    color: #f29597;
+    text-shadow: -1.5px 1px #ee726d;
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 video {
-    position: relative;
-    margin: 2vw;
+    top: 15vh;
+    width: 90vw;
 }
 
-.button {
-    cursor: pointer;
+.text {
+    width: 80vw;
+    top: 55vh;
+    font-family: "Rubik";
 }
 
-#buttons {
-    position: absolute;
-    top: 2vw;
-    width: 100%;
-    height: 5vw;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-#buttons .button {
-    height: 5vw;
-    background-color: black;
-    border-radius: 3vw;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-    margin: 2vw;
-    /* margin-top: 2vw; */
-}
-
-#home-page {
-    display: block;
-}
-
-#home-button {
-    display: none;
-}
-
-#menu {
-    display: none;
-    position: absolute;
-    right: 0vw;
-    width: 30vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.548);
-    flex-wrap: nowrap;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    overflow-y: scroll;
-}
-
-#x {
-    width: 5vw;
-    height: 5vw;
-    background-color: black;
-    border-radius: 3vw;
-    align-self: flex-start;
-    margin: 2vw;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-}
-
-.menu-item {
-    width: 80%;
-    height: 15vh;
-    border-radius: 5vw;
-    background-color: rgb(85, 84, 84);
-    color: white;
-    font-weight: bold;
-    text-align: center;
-    font-size: 2vw;
-    margin-top: 1vw;
+.mapButton  {
+    width: 15vw;
+    bottom: 5vh;
 }
 
 #map {
+    background-image: url(./assets/media/SVG/map.svg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 90vw;
+    height: 134vw;
     position: absolute;
-    top: 50%;
     left: 50%;
+    top: 54%;
     transform: translate(-50%, -50%);
-    width: 80vw;
-    height: 50vh;
-    background-color: aqua;
+    display: grid;
+    grid-template-columns: 0.65fr 0.85fr 0.25fr 1.2fr 1.2fr 0.55fr;
+    grid-template-rows: 2.3fr 0.95fr 0.95fr 1.1fr 0.7fr 1.05fr 0.95fr 1.6fr;
 }
 
-.location {
+.station {
+    /* background-color: #40b2a7; */
+}
+
+.xAndYStation {
+    grid-area: 2/ 2/ span 1/ span 1;
+}
+
+.ProcessingStation1 {
+    grid-area: 2/ 4/ span 1/ span 1;
+}
+
+.ProcessingStation2 {
+    grid-area: 6/ 5/ span 1/ span 1;
+}
+
+.ProcessingStation3 {
+    grid-area: 7/ 5/ span 1/ span 1;
+}
+
+.keyboardStation {
+    grid-area: 3/ 2/ span 1/ span 1;
+}
+
+.blindStation {
+    grid-area: 3/ 4/ span 2/ span 1;
+}
+
+.handStation {
+    grid-area: 4/ 2/ span 1/ span 1;
+}
+
+.raftStation {
+    grid-area: 5/ 4/ span 1/ span 2;
+}
+
+.spiderStation {
+    grid-area: 6/ 2/ span 1/ span 1;
+}
+
+.spiralStation {
+    grid-area: 6/ 4/ span 1/ span 1;
+}
+
+.welcomeStation {
+    grid-area: 7/ 2/ span 1/ span 1;
+}
+
+.safetyStation {
+    grid-area: 7/ 4/ span 1/ span 1;
+}
+
+/* classes */
+.darkScreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.bg {
+    direction: rtl; 
+    position: fixed;
+    margin: 0;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
+.centerX {
     position: absolute;
-    width: 5vw;
-    height: 5vw;
-    background-color: black;
-    border-radius: 3vw;
+    left: 50%;
+    transform: translatex(-50%);
+}
+
+.flexCenter {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.hidden {
+    display: none;
 }
