--- a/odt.css
+++ b/odt.css
@@ -256,33 +256,27 @@ ol, ul {
     right: 0;
     top: 0;
     z-index: 100;
-    height: 100%;
-    width: 50vw;
+    height: 98.5%;
+    width: 55vw;
     background-color: #dcf0f9;
-}
-
-.blueBg {
-    background-image: url("./assets/media/SVG/blueBg.svg");
-}
-
-.redBg {
-    background-image: url("./assets/media/SVG/redBg.svg");
-}
-
-.yellowBg {
-    background-image: url("./assets/media/SVG/yellowBg.svg");
+    /* background-color: #ffffffb9; */
+    border-radius: 1.5em 0 0 1.5em;
+    padding: 0.8em;
+    padding-bottom: 0;
 }
 
 .menuBg {
     background-repeat: no-repeat;
     background-size: cover;
-    width: 50vw;
-    height: 15vw;
+    width: 55vw;
+    height: 13vw;
     color: white;
     font-size: 1.8em;
     text-align: center;
-    line-height: 2;
-    margin-top: 0.2em;
+    line-height: 1.7;
+    margin-top: 0.3em;
+    background: linear-gradient(270deg, #80c7e8, #259fd9);
+    border-radius: 1em;
 }
 
 .exitMenuButton {
@@ -293,7 +287,7 @@ ol, ul {
 }
 
 .menuPage .odt {
-    margin-top: 1.7em;
+    margin-top: 1.3em;
 }
 
 /* scrollBar */
