--- a/odt.css
+++ b/odt.css
@@ -263,6 +263,7 @@ ol, ul {
     font-size: 1.4em;
     background: -webkit-linear-gradient(180deg, #85d1f5, #0790d1);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 700;
     direction: rtl;
